--- a/android/app/src/main/res/layout/cell_title_cesta.xml
+++ b/android/app/src/main/res/layout/cell_title_cesta.xml
@@ -4,12 +4,13 @@
     android:layout_height="wrap_content"
     android:background="@color/bgContent"
     android:baselineAligned="false"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:id="@+id/edit_cesta">
 
     <!-- LEFT TITLE PART -->
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="155dp"
+        android:layout_height="110dp"
         android:layout_weight="3"
         android:background="@color/bgTitleLeft"
         android:gravity="center_horizontal"
@@ -19,21 +20,13 @@
         android:paddingRight="10dp"
         android:paddingTop="20dp">
 
-        <TextView
-            android:id="@+id/id"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:textColor="@android:color/white"
-            android:textSize="40sp" />
-
         <ImageView
-            android:icon="@drawable/cart_outline"
-            android:title="cart"
-            android:layout_height="20dp"
-            android:layout_width="20dp"
-            android:layout_alignBottom="@+id/id"/>
+            android:layout_height="fill_parent"
+            android:layout_width="fill_parent"
+            android:src="@drawable/cart_outline"
+            android:layout_centerHorizontal="true"
+            android:minHeight="40dp"
+            android:minWidth="40dp"/>
 
     </RelativeLayout>
     <!-- RIGHT TITLE PART -->
@@ -42,12 +35,10 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:background="@color/bgTitleRight"
-        android:paddingBottom="20dp"
-        android:paddingEnd="20dp"
-        android:paddingLeft="15dp"
-        android:paddingRight="20dp"
+        android:paddingBottom="15dp"
+        android:paddingEnd="5dp"
         android:paddingStart="15dp"
-        android:paddingTop="20dp">
+        android:paddingTop="15dp">
 
         <TextView
             android:id="@+id/descricao"
@@ -58,8 +49,8 @@
             android:fadingEdge="horizontal"
             android:singleLine="true"
             android:textColor="@android:color/black"
-            android:gravity="center"
-            android:paddingTop="10dp"
+            android:gravity="left"
+            android:paddingTop="15dp"
             android:textSize="20sp" />
 
         <TextView
@@ -97,25 +88,17 @@
             android:layout_alignStart="@id/preco_total"
             android:text="@string/valor_total" />
 
-        <ImageButton
-            android:id="@+id/edit_cesta"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:src="@drawable/pencil_outline"
-            android:background="@color/edit"/>
-
-        <ImageButton
+        <Button
             android:id="@+id/remove_cesta"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_above="@id/edit_cesta"
-            android:layout_alignLeft="@id/edit_cesta"
-            android:layout_alignStart="@id/edit_cesta"
-            android:src="@drawable/delete_forever_outline"
-            android:layout_marginBottom="2dp"
-            android:background="@color/remove"/>
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:drawableStart="@drawable/delete_forever_outline"
+            android:stateListAnimator="@null"
+            android:elevation="20dp"
+            android:background="@color/remove"
+            android:textAppearance="@style/TextAppearance.AppCompat"/>
 
     </RelativeLayout>
 </LinearLayout>
