--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -17,5 +17,5 @@
     <color name="btnRequest">#00695C</color>
     <color name="subTextColor">#ffffff</color>
     <color name="edit">#22e422</color>
-    <color name="remove">#f45430</color>
+    <color name="remove">#a92305</color>
 </resources>
