--- a/android/app/src/main/res/layout/activity_splash_screen.xml
+++ b/android/app/src/main/res/layout/activity_splash_screen.xml
@@ -14,19 +14,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="88dp"
-        app:srcCompat="@drawable/cerva" />
+        app:srcCompat="@drawable/logo" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="156dp"
-        android:text="@string/app_name"
-        android:textColor="@android:color/background_dark"
-        android:textSize="25sp"
-        android:textStyle="bold" />
 
     <ProgressBar
         style="?android:attr/progressBarStyle"
@@ -36,3 +25,5 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="27dp" />
 </RelativeLayout>
+
+
