--- a/android/app/src/main/res/layout/content_main.xml
+++ b/android/app/src/main/res/layout/content_main.xml
@@ -8,13 +8,44 @@
     tools:context=".MainActivity"
     tools:showIn="@layout/app_bar_main">
 
+    <ImageView
+    android:id="@+id/imageViewLogo"
+    android:layout_width="match_parent"
+    android:layout_marginRight="10dp"
+    android:layout_height="180dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginTop="8dp"
+
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:srcCompat="@drawable/topo" />
+
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/textMain"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="Pagando menos e levando mais! Calcule  aqui os preços e garanta ainda mais cerveja!"
+        android:textAlignment="center"
+        android:textColor="?attr/actionModeSplitBackground"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:typeface="normal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnCompras"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignBottom="@+id/textMain"
+        android:layout_marginBottom="58dp"
+        android:background="#548038"
+        android:textAlignment="center"
+        android:text="Vamos as compras"
+        android:textColor="@android:color/white"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
