--- a/android/app/src/main/res/layout/content_cadastro_cesta.xml
+++ b/android/app/src/main/res/layout/content_cadastro_cesta.xml
@@ -20,6 +20,7 @@
         android:id="@+id/cadastroCestaView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="50dp"
         android:background="#A9A9A9"
         android:clipChildren="false"
         android:clipToPadding="false"
