--- a/android/app/src/main/res/layout/activity_produtos_list.xml
+++ b/android/app/src/main/res/layout/activity_produtos_list.xml
@@ -4,9 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.cesta.CadastroCestaActivity">
-
-
+    tools:context=".views.cesta.ProdutosListActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -22,12 +20,10 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/cabecalho_cadastro_cesta" />
-
-    <include layout="@layout/content_cadastro_cesta" />
+    <include layout="@layout/content_produtos_list" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/add_produto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
