--- a/android/app/src/main/res/layout/content_produtos_list.xml
+++ b/android/app/src/main/res/layout/content_produtos_list.xml
@@ -11,15 +11,30 @@
     android:layout_marginTop="40dp"
     app:ignore="NamespaceTypo">
 
+    <TextView
+        android:id="@+id/textMain"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:text=" Cesta + @string/app_name"
+        android:textAlignment="center"
+        android:textColor="?attr/actionModeSplitBackground"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:typeface="normal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <!-- TITLE (FOLDED) LAYOUT (MUST BE AT LEAST 2x times SMALLER than content layout above) -->
-    <include layout="@layout/cell_title_produtos_cesta" />
+    <include layout="@layout/cell_title_produto" />
+
 
     <ListView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/cadastroCestaView"
+        android:id="@+id/cestaListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="50dp"
         android:background="#A9A9A9"
         android:clipChildren="false"
         android:clipToPadding="false"
