--- a/android/app/src/main/res/layout/activity_cadastro_cesta.xml
+++ b/android/app/src/main/res/layout/activity_cadastro_cesta.xml
@@ -25,11 +25,19 @@
     <include layout="@layout/content_cadastro_cesta" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/add_produto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@android:drawable/ic_input_add" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        app:srcCompat="@android:drawable/ic_menu_help" />
 
 </android.support.design.widget.CoordinatorLayout>
