--- a/android/app/src/main/res/layout/cell_title_cesta.xml
+++ b/android/app/src/main/res/layout/cell_title_cesta.xml
@@ -90,15 +90,17 @@
 
         <Button
             android:id="@+id/remove_cesta"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
+            android:layout_width="18dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
+            android:layout_marginTop="47dp"
+            android:layout_marginEnd="8dp"
+            android:background="@color/bgContent"
             android:drawableStart="@drawable/lixo"
-            android:stateListAnimator="@null"
             android:elevation="20dp"
-            android:background="@color/remove"
-            android:textAppearance="@style/TextAppearance.AppCompat"/>
+            android:stateListAnimator="@null"
+            android:textAppearance="@style/TextAppearance.AppCompat" />
 
     </RelativeLayout>
 </LinearLayout>
