--- a/android/app/src/main/res/layout/cell_title_produtos_cesta.xml
+++ b/android/app/src/main/res/layout/cell_title_produtos_cesta.xml
@@ -61,16 +61,57 @@
             android:layout_alignStart="@+id/descricao"
             android:layout_centerVertical="true" />
 
-                <Button
-                    android:id="@+id/remove_produto"
-                    style="@style/Widget.AppCompat.Button"
-                    android:layout_width="37dp"
-                    android:layout_height="35dp"
-                    android:layout_alignEnd="@+id/descricao"
-                    android:layout_alignParentBottom="true"
-                    android:backgroundTint="@color/bgContent"
-                    android:drawableStart="@drawable/lixo"
-                    android:visibility="visible" />
+        <TextView
+            android:id="@+id/preco"
+            style="@style/TitleBadgeText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignTop="@+id/qtde"
+            android:layout_marginEnd="105dp" />
 
-            </RelativeLayout>
-        </LinearLayout>
+        <TextView
+            android:id="@+id/qtde"
+            style="@style/TitleBadgeText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignStart="@+id/descricao" />
+
+        <TextView
+            style="@style/TitleBadgeTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/loja"
+            android:layout_alignStart="@+id/descricao"
+            android:text="@string/loja" />
+
+        <TextView
+            style="@style/TitleBadgeTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/qtde"
+            android:layout_alignStart="@+id/preco"
+            android:text="@string/preco" />
+
+        <TextView
+            style="@style/TitleBadgeTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/qtde"
+            android:layout_alignStart="@+id/descricao"
+            android:text="@string/quantidade" />
+
+        <Button
+            android:id="@+id/remove_produto"
+            style="@style/Widget.AppCompat.Button"
+            android:layout_width="37dp"
+            android:layout_height="35dp"
+            android:layout_alignEnd="@+id/descricao"
+            android:layout_alignParentBottom="true"
+            android:backgroundTint="@color/bgContent"
+            android:drawableStart="@drawable/lixo"
+            android:visibility="visible" />
+
+    </RelativeLayout>
+</LinearLayout>
