--- a/android/app/src/main/res/layout/form_cadastro_produto_cesta.xml
+++ b/android/app/src/main/res/layout/form_cadastro_produto_cesta.xml
@@ -47,6 +47,21 @@
         android:layout_height="59dp"
         android:inputType="numberDecimal" />
 
+    <TextView
+        android:layout_width="55dp"
+        android:layout_height="29dp"
+        android:layout_marginLeft="5dp"
+        android:text="Qtde"
+        android:textColor="@color/colorPrimaryDark"
+        android:textFontWeight="bold"
+        android:textSize="18sp" />
+
+    <EditText
+        android:id="@+id/qtde"
+        android:layout_width="fill_parent"
+        android:layout_height="59dp"
+        android:inputType="numberDecimal" />
+
     <Button
         android:id="@+id/salvar"
         android:layout_width="fill_parent"
