--- a/android/app/src/main/res/layout/activity_cadastro_cesta.xml
+++ b/android/app/src/main/res/layout/activity_cadastro_cesta.xml
@@ -36,7 +36,7 @@
         android:id="@+id/info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
+        android:layout_gravity="bottom|center"
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@android:drawable/ic_menu_help" />
 
