--- a/android/app/src/main/res/layout/cell_title_produtos_cesta.xml
+++ b/android/app/src/main/res/layout/cell_title_produtos_cesta.xml
@@ -5,7 +5,7 @@
     android:background="@color/bgContent"
     android:baselineAligned="false"
     android:orientation="horizontal"
-    android:id="@+id/edit_cesta">
+    android:id="@+id/edit_produto">
 
     <!-- LEFT TITLE PART -->
     <RelativeLayout
@@ -20,13 +20,30 @@
         android:paddingRight="10dp"
         android:paddingTop="20dp">
 
+        <TextView
+            android:id="@+id/preco_total"
+            style="@style/TitleBadgeText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:textSize="16dp" />
+
         <ImageView
+            android:id="@+id/img_beer"
             android:layout_height="fill_parent"
             android:layout_width="fill_parent"
             android:src="@drawable/bebida"
             android:layout_centerHorizontal="true"
             android:minHeight="40dp"
             android:minWidth="40dp"/>
+
+        <TextView
+            android:id="@+id/total_ml"
+            style="@style/TitleBadgeText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:textSize="16dp" />
 
     </RelativeLayout>
     <!-- RIGHT TITLE PART -->
@@ -35,10 +52,10 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:background="@color/bgTitleRight"
-        android:paddingBottom="15dp"
-        android:paddingEnd="5dp"
         android:paddingStart="15dp"
-        android:paddingTop="15dp">
+        android:paddingTop="15dp"
+        android:paddingEnd="5dp"
+        android:paddingBottom="15dp">
 
         <TextView
             android:id="@+id/descricao"
@@ -66,17 +83,29 @@
             style="@style/TitleBadgeText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
             android:layout_alignTop="@+id/qtde"
-            android:layout_marginEnd="105dp" />
+
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="-52dp"
+            android:layout_marginEnd="48dp" />
+
+        <TextView
+            android:id="@+id/preco_litro"
+            style="@style/TitleBadgeText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/preco"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="53dp"
+            android:layout_marginEnd="111dp" />
 
         <TextView
             android:id="@+id/qtde"
             style="@style/TitleBadgeText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignStart="@+id/descricao" />
+            android:layout_alignStart="@+id/descricao"
+            android:layout_alignParentBottom="true" />
 
         <TextView
             style="@style/TitleBadgeTitle"
@@ -92,7 +121,17 @@
             android:layout_height="wrap_content"
             android:layout_above="@+id/qtde"
             android:layout_alignStart="@+id/preco"
+            android:layout_marginStart="-1dp"
+            android:layout_marginBottom="52dp"
             android:text="@string/preco" />
+
+        <TextView
+            style="@style/TitleBadgeTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/qtde"
+            android:layout_alignStart="@+id/preco_litro"
+            android:text="@string/preco_litro" />
 
         <TextView
             style="@style/TitleBadgeTitle"
