--- a/android/app/src/main/res/layout/cell_title_cesta.xml
+++ b/android/app/src/main/res/layout/cell_title_cesta.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="110dp"
         android:layout_weight="3"
-        android:background="@color/bgTitleLeft"
+        android:background="#86c2bb"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:paddingBottom="20dp"
@@ -21,12 +21,14 @@
         android:paddingTop="20dp">
 
         <ImageView
-            android:layout_height="fill_parent"
             android:layout_width="fill_parent"
-            android:src="@drawable/packbeer"
-            android:layout_centerHorizontal="true"
+            android:layout_height="fill_parent"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginTop="10dp"
             android:minHeight="40dp"
-            android:minWidth="40dp"/>
+            android:minWidth="40dp"
+            android:src="@drawable/packbeer" />
 
     </RelativeLayout>
     <!-- RIGHT TITLE PART -->
@@ -90,15 +92,17 @@
 
         <Button
             android:id="@+id/remove_cesta"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
+            android:layout_width="18dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
+            android:layout_marginTop="47dp"
+            android:layout_marginEnd="8dp"
+            android:background="@color/bgContent"
             android:drawableStart="@drawable/lixo"
-            android:stateListAnimator="@null"
             android:elevation="20dp"
-            android:background="@color/remove"
-            android:textAppearance="@style/TextAppearance.AppCompat"/>
+            android:stateListAnimator="@null"
+            android:textAppearance="@style/TextAppearance.AppCompat" />
 
     </RelativeLayout>
 </LinearLayout>
