--- a/android/app/src/main/res/menu/activity_main_drawer.xml
+++ b/android/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,16 +6,16 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_cestas"
-            android:icon="@drawable/briefcase_outline"
+            android:icon="@drawable/packbeericon"
             android:title="Cestas" />
         <item
+            android:id="@+id/nav_cervejas"
+            android:icon="@drawable/bebidaicon"
+            android:title="Cervejas" />
+        <!--<item
             android:id="@+id/nav_lojas"
             android:icon="@drawable/store"
             android:title="Lojas" />
-        <item
-            android:id="@+id/nav_cervejas"
-            android:icon="@drawable/beer"
-            android:title="Cervejas" />
         <item
             android:id="@+id/nav_marcas"
             android:icon="@drawable/alpha_m_circle"
@@ -27,7 +27,7 @@
         <item
             android:id="@+id/nav_pesquisas"
             android:icon="@drawable/help_circle_outline"
-            android:title="Pesquisas Rápidas" />
+            android:title="Pesquisas Rápidas" />-->
     </group>
 
 </menu>
