--- a/android/app/src/main/res/layout/form_cadastro_produto.xml
+++ b/android/app/src/main/res/layout/form_cadastro_produto.xml
@@ -75,7 +75,7 @@
         android:layout_height="wrap_content"
         android:background="@color/btnRequest"
         android:text="Salvar"
-        android:textColor="@color/bgTitleRight"
+        android:textColor="#ff0000"
         android:textColorLink="@color/bgContent" />
 
 </LinearLayout>
