--- a/android/app/src/main/res/layout/cell_title_loja.xml
+++ b/android/app/src/main/res/layout/cell_title_loja.xml
@@ -12,21 +12,21 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_weight="3"
-        android:background="#00695c"
+        android:background="#FF6FD0C4"
         android:gravity="center_horizontal"
         android:orientation="vertical"
-        android:paddingBottom="20dp"
         android:paddingLeft="10dp"
+        android:paddingTop="20dp"
         android:paddingRight="10dp"
-        android:paddingTop="20dp">
+        android:paddingBottom="20dp">
 
         <ImageView
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
-            android:minHeight="40dp"
             android:minWidth="40dp"
+            android:minHeight="40dp"
             android:src="@drawable/store" />
 
     </RelativeLayout>
