--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#E65100</color>
     <color name="colorBgCesta">#1A237E</color>
     <color name="bgBackSideColor">#00695C</color>
-    <color name="bgTitleLeft">#00695C</color>
+    <color name="bgTitleLeft">#428b82</color>
     <color name="bgTitleRight">#ffffff</color>
     <color name="bgContentTop">#00695C</color>
     <color name="bgContent">#fbfcfc</color>
