Integrando com a API REST.

--- a/android/app/src/main/res/layout/content_bebidas_list.xml
+++ b/android/app/src/main/res/layout/content_bebidas_list.xml
@@ -12,7 +12,7 @@
     app:ignore="NamespaceTypo">
 
     <!-- TITLE (FOLDED) LAYOUT (MUST BE AT LEAST 2x times SMALLER than content layout above) -->
-    <include layout="@layout/cell_title_loja" />
+    <include layout="@layout/cell_title_bebida" />
 
     <ListView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
