--- a/android/app/src/main/res/layout/cabecalho_cadastro_cesta.xml
+++ b/android/app/src/main/res/layout/cabecalho_cadastro_cesta.xml
@@ -5,6 +5,6 @@
     android:background="@color/bgContent"
     android:baselineAligned="false"
     android:orientation="horizontal"
-    android:id="@+id/edit_cesta">
+    android:id="@+id/edit_cestaaa">
 
 </LinearLayout>
